--- a/style.css
+++ b/style.css
@@ -139,8 +139,8 @@ header {
     text-align: center;
   }
   
-  h1{
-    color: rgb(247, 19, 19);
+  th{
+    color: rgb(240, 233, 233);
     font-family:Arial, Helvetica, sans-serif;
     font-size: 80px;
     margin-left: 0%;
