--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ header {
     font-size: 65px;
   }
   h3{
-    color: #ffee00;
+    color: #ff0000;
     font-size: 45px;
   }
   h4{
@@ -161,7 +161,7 @@ header {
     
   }
   h5{
-    color: #ffd900;
+    color: #ff0000;
     font-size: 45px;
     font-family:'Times New Roman', Times, serif;
   }
