--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body{
   /*color de fondo*/
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   /*ingresamos la imagen*/
   background-image: url(fondo.jpeg);
   /*hacemos que no sse repita*/
@@ -103,14 +103,14 @@ header {
     width: 100%; /* Ancho de la tabla */
 
   }
-  .perros{
+  .micheladas{
     margin-top: 7%; /*espasio superior*/
     margin-left: 10%; /*espacio lateral izquierdo*/
     border-collapse: collapse;
     width: 80%; /* Ancho de la tabla */
   }
   
-  .empanadas {
+  .cerveza {
     margin-top: 20%;
     margin-left: 10%;
     border-collapse: collapse;
@@ -146,14 +146,17 @@ header {
     margin-left: 0%;
   }
   h2{
+    line-height: 0.1;
     color: #ffffff;
     font-size: 65px;
   }
   h3{
+    line-height: 0.1;
     color: #ff0000;
     font-size: 45px;
   }
   h4{
+    line-height: 0.1;
     color: #ffffff;
     font-size: 45px;
     font-family: 'Times New Roman', Times, serif;
@@ -161,6 +164,7 @@ header {
     
   }
   h5{
+    line-height: 0.1;
     color: #ff0000;
     font-size: 45px;
     font-family:'Times New Roman', Times, serif;
@@ -184,12 +188,12 @@ header {
     width: 80%; /* Ancho de la tabla */
   }
   button {
-    background: #1ffb7b;
+    background: #ff000073;
     font-family: inherit;
     padding: 0.6em 1.3em;
     font-weight: 900;
     font-size: 50px;
-    border: 3px solid black;
+    border: 3px solid rgb(255, 255, 255);
     border-radius: 0.4em;
     box-shadow: 0.1em 0.1em;
     cursor: pointer;
@@ -205,6 +209,11 @@ header {
     transform: translate(0.05em, 0.05em);
     box-shadow: 0.05em 0.05em;
   }
+  
+
+
+
+  
   
   
  
